# mc_ceres

./: CMakeLists.txt
include/: mc_functor.h  mc_gradient.h  mc_gradient_bilinear.h  mc_gradient_bilinear_gsl.h  mc_gradient_double.h  mc_gradient_lbfgspp.h  mc_leastsquares.h  motion_compensation.h  motion_compensation_double.h  motion_compensation_float.h  reduce.h  utils.h
src/: aedat_mc.cpp  cudatest.cpp  helloworld_analytic.cpp  main.cpp  main_double.cpp  main_gsl.cpp  main_lbfgsb.cpp  main_txt.cpp  motion_compensation.cu  motion_compensation_double.cu  motion_compensation_float.cu  plot.cpp  plot_double.cpp  reduce.cu
